--- a/Assignment 1/styles/problemCss.css
+++ b/Assignment 1/styles/problemCss.css
@@ -27,3 +27,10 @@
     background-color: #e9e6e6;
     font-size:1rem;
 }
+
+.navbar-hover:hover{
+    border-radius: 1rem;
+    padding-bottom: 0rem;
+    background-color: #e9e6e6;
+    font-size:1rem;
+}
