--- a/Assignment 1/styles/problemsCss.css
+++ b/Assignment 1/styles/problemsCss.css
@@ -68,7 +68,10 @@ body {
     color: white;
     font-size: 1.2rem;
   }
-    @media all and (max-width:768px){
+  .nav-active{
+    color:#000000;
+  }
+  @media all and (max-width:768px){
         .avgtime{
             display:none;
         }
